--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8080
+spring:
+  application:
+    name: microservice-consumer
+    erueka:
+      client:
+        serviceUrl:
+          defaultZone: http://localhost:8761/eureka
+      instance:
+        perfer-ip-address: false
