--- a/provider/src/main/resources/application.yml
+++ b/provider/src/main/resources/application.yml
@@ -27,6 +27,14 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
+  application:
+    name: microservice-provider
+  erueka:
+    client:
+      serviceUrl:
+        defaultZone: http://localhost:8761/eureka
+    instance:
+      perfer-ip-address: true
 
 logging:
   level:
